--- a/app/views/newsfeed/_post.html.haml
+++ b/app/views/newsfeed/_post.html.haml
@@ -74,7 +74,7 @@
                 |  
               %span.view_raw{ style: "color: #404040; cursor: pointer;", onclick: "$(this).parents('.CRarea').find('.preview').hide(); $(this).parents('.CRarea').find('.raw').show();" } View Raw
               | 
-              %span.reload{ style: "color: #404040; cursor: pointer;", onclick: "$(this).parents('.CRarea').find('iframe').attr('src', $(this).parents('.CRarea').find('iframe').attr('src'));" } Reload
+              %span.reload{ style: "color: #404040; cursor: pointer;", onclick: "$(this).parents('.CRarea').find('iframe').attr('src', $(this).parents('.CRarea').find('iframe').data('src'));" } Reload
             - if @enable_administration
               |
               %span
@@ -83,7 +83,7 @@
                 - else
                   = link_to "In the Hall of Fame", "#"
           - if post["submitted_answer_content"] && post["submitted_answer_content"].downcase.include?("<html>")
-            %iframe{ src: raw_path(post["submitted_answer_id"]), style: "min-height: 150px; width: 100%; border: 0; z-index: 1;" }
+            %iframe{ data: { content: post["submitted_answer_content"], src: raw_path(post["submitted_answer_id"]) }, id: "iframe_#{post["submitted_answer_id"]}", style: "min-height: 150px; width: 100%; border: 0; z-index: 1;" }
           - else
             %code.content{ style: "word-break:normal;" }= post["submitted_answer_content"]
         - if post["answer_sub_type"] == Task::TEXT.to_s
