--- a/app/views/tasks/_task.html.haml
+++ b/app/views/tasks/_task.html.haml
@@ -2,12 +2,12 @@
   %div.edit_task_buttons{ style: "float:right; margin-top:5px; " }
     - if task.creator == current_user
       .btn-group
-        = link_to "Edit", edit_task_path(task.id), remote: true, class: "btn edit_button"
+        = link_to "Edit", edit_task_path(task.id), remote: true, class: "btn edit_button loadable"
         %button.btn.dropdown-toggle{"data-toggle" => "dropdown"}
           %span.caret
         %ul.dropdown-menu{ style: "min-width: 100px;" }
-          %li= link_to "Delete", task, method: :delete, remote: true, confirm: "Are you sure you want to delete this question?", "data-type" => "json", class: "delete_button"
-          %li= link_to "Archive", archive_task_path(task), method: :put, remote: true, confirm: "Are you sure you want to archive this question?", "data-type" => "json", class: "archive_button"
+          %li= link_to "Delete", task, method: :delete, remote: true, confirm: "Are you sure you want to delete this question?", "data-type" => "json", class: "delete_button loadable"
+          %li= link_to "Archive", archive_task_path(task), method: :put, remote: true, confirm: "Are you sure you want to archive this question?", "data-type" => "json", class: "archive_button loadable"
     - else
       = link_to "Edit", edit_task_path(task.id), remote: true, class: "btn edit_button"
     
@@ -33,7 +33,7 @@
         %pre{ style:"word-break:normal;" }= task.template
   %div{ style: "position: relative; bottom: 0px; margin-left: 45px; font-size: 11px;"}
     - unless task.topic_id.to_i == 0
-      %span Topic: #{task.topic.name}
+      %p Topic: #{task.topic.name}
     - unless task.resource.blank?
       = link_to "Source: "+task.resource_title, task.resource, target: "_blank"
   
