--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -50,4 +50,5 @@
             = link_to "Hall of Fame", root_url(order: "halloffame"), class: "btn rightbtn"
         :javascript
           $.ajax({ type: "GET", url: "#{newsfeed_path(order: params[:order])}", success: function(data){ $(".empty_post").replaceWith(data); } });
-        %div.post.empty_post{ style: "height: 300px;"}
+        %div.post.empty_post{ style: "height: 300px; text-align: center;" }
+          %img{ src: ICON_LOADING_URL, style: "width: 30px; height: 30px;" }
