--- a/app/views/paths/show.html.haml
+++ b/app/views/paths/show.html.haml
@@ -117,4 +117,5 @@
             = link_to "Hall of Fame", challenge_path(@path.permalink, order: "halloffame"), class: "btn rightbtn"
         :javascript
           $.ajax({ type: "GET", url: "#{@url_for_newsfeed}", success: function(data){ $(".empty_post").replaceWith(data); } });
-        %div.post.empty_post{ style: "height: 5px;"}
+        %div.post.empty_post{ style: "height: 5px; text-align: center;" }
+          %img{ src: ICON_LOADING_URL, style: "width: 30px; height: 30px;" }
