Fixing iframe javascript and ace.js

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,6 +3,8 @@
   %head
     = render "layouts/head"
   %body
+    - if @require_ace_editor
+      %script{ src: "http://rawgithub.com/ajaxorg/ace-builds/master/src-noconflict/ace.js", type: "text/javascript", charset: "utf-8" }
     - if current_user
       - if @path and @current_section
         = render "modals/launchpad"
@@ -111,8 +113,6 @@
         });
         return true;
       });
-    
-    %script{ src: "http://rawgithub.com/ajaxorg/ace-builds/master/src-noconflict/ace.js", type: "text/javascript", charset: "utf-8" }
 
     - if Rails.env == "production"
       :javascript
