--- a/app/views/newsfeed/_post.html.haml
+++ b/app/views/newsfeed/_post.html.haml
@@ -123,5 +123,5 @@
     
     - unless post["submitted_answer_caption"].blank?
       %div.post_caption= post["submitted_answer_caption"]
-    = render "comments/comments", social_details(post).merge(feed: feed)
+    = render "comments/comments", social_details(post).merge(context: feed.context)
     
