--- a/app/views/newsfeed/_post.html.haml
+++ b/app/views/newsfeed/_post.html.haml
@@ -52,6 +52,8 @@
           %div.social_toolbar
             - u=root_url
             - a=u+"#{submission_drilldown_path(post["submitted_answer_id"])}"
+            = link_to "http://www.reddit.com/submit", onclick: "window.location = 'http://www.reddit.com/submit?url=' + encodeURIComponent(window.location); return false", target: "_blank" do             
+              = image_tag SHARE_REDDIT, alt:"Share on Reddit", border:"0", style: "margin-right: 4px; "
             = link_to "#", onclick: sharing_popup_javascript(:facebook, challenge_url(@path.permalink)) do
               = image_tag SHARE_FACEBOOK, alt: "Share on Facebook"
             = link_to "#", onclick: sharing_popup_javascript(:twitter, "#{a.to_s}", title) do
