--- a/app/views/newsfeed/_post.html.haml
+++ b/app/views/newsfeed/_post.html.haml
@@ -49,17 +49,8 @@
             %span.vote_points= post["points_awarded"]
             %span.vote_points{ style:"margin-right:5px;" } pts
         - if feed.context == :submission
-          %div.social_toolbar
-            - u=root_url
-            - a=u+"#{submission_drilldown_path(post["submitted_answer_id"])}"
-            = link_to "http://www.reddit.com/submit", onclick: "window.location = 'http://www.reddit.com/submit?url=' + encodeURIComponent(window.location); return false", target: "_blank" do             
-              = image_tag SHARE_REDDIT, alt:"Share on Reddit", border:"0", style: "margin-right: 4px; "
-            = link_to "#", onclick: sharing_popup_javascript(:facebook, challenge_url(@path.permalink)) do
-              = image_tag SHARE_FACEBOOK, alt: "Share on Facebook"
-            = link_to "#", onclick: sharing_popup_javascript(:twitter, "#{a.to_s}", title) do
-              = image_tag SHARE_TWITTER, alt: "Share on Twitter"
-            = link_to "#", onclick: sharing_popup_javascript(:google_plus, "#{a.to_s}", title) do
-              = image_tag SHARE_GOOGLE, alt: "Share on Google+"
+          = render "shared/sharing", { custom_style: "", title: "Great response in the #{@path.name} Challenge on @MetaBright" }
+                
       
     %div.posttext.leveltext.dropdown{ style: "#{'background-color: rgb(195, 225, 247)' if post["answer_type"] == Task::CHECKIN}" }
       %code.dropdown-toggle{ "data-toggle" => "dropdown", role: "button"} #{post["question"]}
