--- a/app/assets/stylesheets/profile.css.scss
+++ b/app/assets/stylesheets/profile.css.scss
@@ -92,7 +92,7 @@
 .usercard { padding-top: 6px;border: 1px solid rgba(0,0,0,.1);border-radius: 6px;background-color: whitesmoke;display: inline-block;color: gray;font-size: 12px;min-width: 597px;padding: 2px 10px 10px;}
 .usercard ul { }
 .shareprofile { float:right;border: 1px solid rgba(0,0,0,.1);padding: 5px 8px;background-color: #f9f9f9;border-radius: 5px; }
-.shareprofile p { font-weight:bold; font-size:14px; }
+.shareprofile p { font-weight:bold; font-size:14px; text-align:center;}
 #profile .span9 { width: 735px; position: relative; margin:0; bottom:5px; }
 .vitalinfo {  position: absolute; bottom: 6px; width:69%; }
 .vitalinfo a:hover { text-decoration: none;  }
