--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,6 +3,9 @@
   %head
     = render "layouts/head"
   %body
+    - if @custom_style
+      :css
+        #{@custom_style.styles}
     - if current_user
       - if @path and @current_section
         = render "modals/launchpad"
