Adding tokens to groups.

--- a/app/views/groups/sandbox.html.haml
+++ b/app/views/groups/sandbox.html.haml
@@ -62,6 +62,6 @@
       });
     }
     
-    var email = "jskirst@gmail.com";
+    var email = "#{current_user.email}";
     var group = "ihub";
     getMetaBrightUser(email, group);
