--- a/app/views/groups/_demo.js.erb
+++ b/app/views/groups/_demo.js.erb
@@ -1,13 +1,16 @@
-function getMetaBrightUser(email, group){
+function getMetaBrightUser(email, token){
   var endpoint = "/groups/users";
   $.ajax({
     url: endpoint, 
-    data: { email: email, group: group},
+    data: { email: email, token: token},
     success: function(data, status, xhr){
-      var user = data;
-      var challenges = user.challenges;
-      console.log(challenges);
+      console.log(data);
     },
     dataType: "json"
   });
 }
+
+var email = "<%= user.email %>";
+var token = "<%= group.token %>";
+
+getMetaBrightUser(email, token);
