Allowing user to specifiy which user they would like to see demoed.

--- a/app/views/groups/_demo.js.erb
+++ b/app/views/groups/_demo.js.erb
@@ -10,7 +10,7 @@ function getMetaBrightUser(email, token){
   });
 }
 
-var email = "<%= user.email %>";
+var email = "<%= email %>";
 var token = "<%= group.token %>";
 
 getMetaBrightUser(email, token);
