--- a/app/views/tasks/_task.html.haml
+++ b/app/views/tasks/_task.html.haml
@@ -1,6 +1,6 @@
 %div.question_display{ id: move ? "must_move" : "" }
   %div.edit_task_buttons{ style: "float:right; margin-top:5px; " }
-    - if task.creator == current_user
+    - if task.creator == current_user or @path.user_id == current_user.id or @enable_administration
       .btn-group
         = link_to "Edit", edit_task_path(task.id), remote: true, class: "btn edit_button loadable"
         %button.btn.dropdown-toggle{"data-toggle" => "dropdown"}
