--- a/app/views/groups/edit.html.haml
+++ b/app/views/groups/edit.html.haml
@@ -23,7 +23,11 @@
           .control-group
             %label.control-label About
             %div.controls
-              = f.text_area :description, rows: "2", style: "width: 390px;", placeholder: "Write a brief description for your Group..."  
+              = f.text_area :description, rows: "2", style: "width: 390px;", placeholder: "Write a brief description for your Group..."
+          .control-group
+            %label.control-label Customize CSS
+            %div.controls{ style: "margin-top: 6px;" }
+              = link_to "Customize your Group with your own CSS Styles", style_group_path(@group)
         %div{ style:"vertical-align: top; display: inline-block; margin: 0 20px 5px 0;" }
           %div.control-group
             %div.controls{style:"margin-left:112px;"}
@@ -62,4 +66,4 @@
     %div.control-group
       %div.controls
       = f.submit "Save", class: "button button-actionable", style: "float: right; margin-left: 10px; margin-right: 20px;"
-      = link_to "Cancel", group_path(@group.permalink), class: "button button-standard", style: "float: right;"
+      = link_to "Back", group_path(@group.permalink), class: "button button-standard", style: "float: right;"
