--- a/app/views/users/_contribution.html.haml
+++ b/app/views/users/_contribution.html.haml
@@ -1,8 +1,7 @@
-%div
+.contribution
   = image_tag contribution[:image_url], class: "bigger_img"
   %div
     %h3= contribution[:name]
     %h4 
-      #{contribution[:users]} Users
-      %span · 
+      #{contribution[:users]} Users, 
       #{contribution[:count]} Questions
