--- a/app/views/pages/profile.html.haml
+++ b/app/views/pages/profile.html.haml
@@ -199,7 +199,7 @@
                       - enrollment_details[:topics].each do |topic|
                         %li= topic
                   - else
-                    %p No strengths discovered yet. Answer more questions to unlock new strengths.
+                    %p{ style: "margin-top: 5px;"} No strengths discovered yet. Answer more questions to reveal new strengths.
             %hr
             %div.crbucket
               %h2
