--- a/app/views/pages/create_evaluation.html.haml
+++ b/app/views/pages/create_evaluation.html.haml
@@ -1,5 +1,9 @@
-%div.container.body
-  %div.single_pane.create_evaluation{ style: "padding: 8px; "}
+:css
+  body{ background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto; }
+  .aboutcontainer{ background: rgba(36, 72, 109, 0.8); }
+
+#employer.aboutcontainer
+  %div.aboutbox.create_evaluation{ style: "padding: 8px; "}
     %div{ style: "width: 100%; border-bottom: 1px solid #DDD;" }
       = image_tag STONEY_SMALL_URL, style: "height: 115px; display: inline; vertical-align: middle", alt: "Stoney"
       %h1{ style: "display: inline; vertical-align: middle; font-size:50px;" } Create an Evaluation
