challenge creator style

--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -524,7 +524,7 @@ ul.inlinedisplay div.mosaic-block.bar2 { height: 130px; }
 .challenge_naming{
   h4{ color: rgb(204, 0, 0); font-weight: bold; }
   h5{ font-size: 15px; margin: 10px 0; display: inline-block; }
-  ul{ list-style: none; font-size: 15px; }
+  ul{ list-style: none; font-size: 15px; margin-left: 0; }
   img { position:relative; bottom:2px; display: inline-block; height: 18px; width: 18px; }
   
   .button { width: 252px; } 
