--- a/app/views/paths/edit.html.haml
+++ b/app/views/paths/edit.html.haml
@@ -22,7 +22,7 @@
       - if current_user.id == @path.user_id
         %div.control-group{ style: "margin-bottom: 10px;" }
           %label.control-label Custom CSS
-          %div.controls{ style: "margin-top: 6px;" }= link_to "Customize Path Styles", style_path_path(@path.permalink), style: "line-height:18px; padding-top: 5px;"
+          %div.controls{ style: "margin-top: 6px;" }= link_to "Customize Challenge Styles", style_path_path(@path.permalink), style: "line-height:18px; padding-top: 5px;"
       - if false
         %div.control-group{ style: "margin-bottom: 5px;" }
           %label.control-label Collaborators
